--- a/Presentation.tex
+++ b/Presentation.tex
@@ -156,7 +156,7 @@
 \end{frame}
 
 % frame 3
-\begin{frame}{Vacuum chamber}
+\begin{frame}{Measurement system}
 	\begin{center}		
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
@@ -175,10 +175,9 @@
 % frame 4
 \begin{frame}{Torsional pendulum}
 	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{pendulum_front_names.png}
+		\includegraphics[width=0.7\textwidth,keepaspectratio]{pendulum_front_names.png}
 	\end{center}
 	\begin{itemize}
-		\item Held by an adjustable mount; for accurate location. 
 		\item Front mirror stabilized by a balancing mass.
 		\item Chosen dimensions aim achieving small $\kappa$ with large $T$.
 		\item Measured: $T = 84[s]$, $\kappa = 2.7\cdot10^{-6}[\frac{N\cdot m}{rad}]$.
@@ -200,9 +199,9 @@
     \end{center}
 	\begin{itemize}	
 		\item PID controller is a feedback based control system, for time continuous control of a process (damped motion).
+		\item When PID tuned correct; critical damping of process.
 		\item The control is a weighted sum of proportional, integral and derivative response to error from defined set point (P-I-D).
 		\item Feedback applies an external correction to the process: $\tau(t)$.
-		\item When PID tuned correct; critical damping of process.
 
 	\end{itemize}
 	\hyperlink{frame:Proportional–integral–derivative (PID) controller 1}{>>} 
