--- a/Presentation.tex
+++ b/Presentation.tex
@@ -198,7 +198,8 @@
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
     \end{center}
 	\begin{itemize}	
-		\item PID controller is a feedback based control system, for time continuous control of a process (damped motion).
+
+		\item PID is a feedback based control system, for continuous control of a process to a defined set point (damped motion).
 		\item When PID tuned correct; critical damping of process.
 		\item The control is a weighted sum of proportional, integral and derivative response to error from defined set point (P-I-D).
 		\item Feedback applies an external correction to the process: $\tau(t)$.
