--- a/Presentation.tex
+++ b/Presentation.tex
@@ -202,7 +202,9 @@
 		\item PID is a feedback based control system, for continuous control of a process to a defined set point (damped motion).
 		\item When PID tuned correct; critical damping of process.
 		\item The control is a weighted sum of proportional, integral and derivative response to error from defined set point (P-I-D).
-		\item Feedback applies an external correction to the process: $\tau(t)$.
+		%\item Feedback applies an external correction to the process: $\tau(t)$.
+		\item Feedback applies correction by modulating the radiation pressure tourqe.
+
 
 	\end{itemize}
 	\hyperlink{frame:Proportional–integral–derivative (PID) controller 1}{>>} 
