--- a/Presentation.tex
+++ b/Presentation.tex
@@ -203,7 +203,7 @@
 		\item When PID tuned correct; critical damping of process.
 		\item The control is a weighted sum of proportional, integral and derivative response to error from defined set point (P-I-D).
 		%\item Feedback applies an external correction to the process: $\tau(t)$.
-		\item Feedback applies correction by modulating the radiation pressure tourqe.
+		\item Feedback applies correction by modulating the external tourqe.
 
 
 	\end{itemize}
