--- a/Presentation.tex
+++ b/Presentation.tex
@@ -149,7 +149,7 @@
 	\begin{itemize}
 		\item Torsional pendulum is placed inside a vacuum chamber and an acoustic box; reducing environmental coupled noises.
 		\item A PID feedback algorithm modulates two light sources in real-time; tilt angle measured with a laser hitting a mirror.
-		\item Pendulum damped by external radiation pressure tourqe.
+		\item Pendulum damped by external radiation pressure tourqe $\tau(t)$.
 	
 	\end{itemize}
 	
@@ -200,10 +200,10 @@
 	\begin{itemize}	
 
 		\item PID is a feedback based control system, for continuous control of a process to a defined set point (damped motion).
-		\item When PID tuned correct; critical damping of process.
+		\item When tuned correct; critical damping of process.
 		\item The control is a weighted sum of proportional, integral and derivative response to error from defined set point (P-I-D).
 		%\item Feedback applies an external correction to the process: $\tau(t)$.
-		\item Feedback applies correction by modulating the external tourqe.
+		\item Feedback applies correction by modulating the tourqe $\tau(t)$.
 
 
 	\end{itemize}
