--- a/Presentation.tex
+++ b/Presentation.tex
@@ -239,9 +239,6 @@
 \end{frame}
 
 
-
-
-
 \begin{frame}{Previous laser setup}
 	\begin{center}		
 		\includegraphics[width=0.8\textwidth,keepaspectratio]{aom2.png}
@@ -249,8 +246,8 @@
 	\begin{itemize}		
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams with mutual source.
 		\item High modulation range of 13-bit.
-		\item Non linear response results with uncertainty and overshoot.
-		\item Slow frequency causes phase delay; $f \approx 1 [Hz]$.
+		\item Non linear response caused uncertainty and overshoot.
+		\item Slow frequency caused phase delay; $f \approx 1 [Hz]$.
 		%\item Fluctuations uncertainty minimized; mutual source.
 	\end{itemize}
 \end{frame}
@@ -261,7 +258,7 @@
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{led_setup.png}
 	\end{center}
 	\begin{itemize}		
-		\item LED driven by a PWM circuit using an Arduino controller and coupled into a light guide reducing field of view.
+		\item TWO LED driven by an Arduino controller using PWM response and coupled into light guide reducing field of view.
 		\item Low modulation range of 8-bit.
 		\item Linear response minimizes overshoot.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
