--- a/Presentation.tex
+++ b/Presentation.tex
@@ -258,7 +258,7 @@
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{led_setup.png}
 	\end{center}
 	\begin{itemize}		
-		\item TWO LED driven by an Arduino controller using PWM response and coupled into light guide reducing field of view.
+		\item Two LED driven by an Arduino controller using PWM response and coupled into light guides reducing field of view.
 		\item Low modulation range of 8-bit.
 		\item Linear response minimizes overshoot.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
