--- a/Presentation.tex
+++ b/Presentation.tex
@@ -258,9 +258,9 @@
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{led_setup.png}
 	\end{center}
 	\begin{itemize}		
-		\item LED driven by an Arduino controller using PWM response and coupled into light guide reducing field of view.
+		\item Two LED sources driven by an Arduino controller and coupled into light guides reducing field of view.
 		\item Low modulation range of 8-bit.
-		\item Linear response minimizes overshoot.
+		\item Linear PWM response minimizes overshoot.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
 		
 		
