--- a/Presentation.tex
+++ b/Presentation.tex
@@ -258,7 +258,7 @@
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{led_setup.png}
 	\end{center}
 	\begin{itemize}		
-		\item Two LED sources driven by an Arduino controller and coupled into light guides reducing LED's field of view.
+		\item Two LED sources driven by an Arduino controller and coupled into light guides increasing illumination efficiency.
 		\item Low modulation range of 8-bit.
 		\item Linear PWM response minimizes overshoot.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
