--- a/Presentation.tex
+++ b/Presentation.tex
@@ -270,7 +270,7 @@
 
 
 \subsection{Results}
-\begin{frame}{Damping result}
+\begin{frame}{Damping experiment}
 	\begin{center}		
 		\includegraphics[width=0.7\textwidth,keepaspectratio]{measured oscillation angle.png}
 	\end{center}
@@ -283,15 +283,13 @@
 						
 	\end{itemize}
 \end{frame}
-\begin{frame}{Time integration}
+\begin{frame}{Damping results}
 	\begin{center}		
 		\includegraphics[width=0.7\textwidth,keepaspectratio]{measured oscillation angle1.png}
 	\end{center}
 	\begin{itemize}	
-		\item Setup able to damp up to an amplitude of $0.05[\mu rad]$.
-		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$; which enables reducing uncertainty further more by time integration.	
-		
-						
+		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$; enables reducing uncertainty further more by time integration.	
+		\item Setup able to damp up to an amplitude of $0.05[\mu rad]$.					
 	\end{itemize}
 \end{frame}
 
