--- a/Presentation.tex
+++ b/Presentation.tex
@@ -314,7 +314,7 @@
 % frame 1
 \begin{frame}{\hypertarget{frame:Environmental noises}{Environmental noises}}
 	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{actual system_crop.jpg}
     \end{center}
 	\begin{itemize}
 		
