--- a/Presentation.tex
+++ b/Presentation.tex
@@ -339,8 +339,8 @@
 
 	\begin{itemize}	
 		
+		\item Only net collision power affects the motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
-		\item Only net collision power affects the motion uncertainty.
 		\item Coupled noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
 					
 	\end{itemize}
@@ -352,7 +352,6 @@
 \begin{frame}{Resolution limit}
 	
 	\begin{itemize}
-		\item Amplitude limited by Brownian uncertainty of $p=6.2\mu W$.
 		\item Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$ (from Q factor).
 		\item Resolution limit proportional to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
