--- a/Presentation.tex
+++ b/Presentation.tex
@@ -339,7 +339,7 @@
 
 	\begin{itemize}	
 		
-		\item Only net collision power affects the motion.
+		\item Only net collision power affects the pendulum motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
 		\item Coupled noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
 					
