--- a/Presentation.tex
+++ b/Presentation.tex
@@ -341,7 +341,7 @@
 		
 		\item Only net collision power affects the pendulum motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
-		\item Coupled noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
+		\item Coupled noise is mainly composed of Brownian motion (with negligible black body radiation and acoustic waves power).   	 
 					
 	\end{itemize}
 	\hyperlink{frame:Effective noise 1}{>>} 
@@ -352,6 +352,8 @@
 \begin{frame}{Resolution limit}
 	
 	\begin{itemize}
+		\item Coupled noise is mainly composed of Brownian motion 
+		\item Amplitude limited by Brownian uncertainty of $p=6.2\mu W$.
 		\item Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$ (from Q factor).
 		\item Resolution limit proportional to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
