--- a/Presentation.tex
+++ b/Presentation.tex
@@ -341,7 +341,7 @@
 		
 		\item Only net collision power affects the pendulum motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
-		\item Coupled noise is mainly composed of Brownian motion (with negligible black body radiation and acoustic waves power).   	 
+		\item Coupled noise is mostly Brownian motion (with negligible addition of black body radiation and acoustic waves).   	 
 					
 	\end{itemize}
 	\hyperlink{frame:Effective noise 1}{>>} 
