--- a/Presentation.tex
+++ b/Presentation.tex
@@ -352,8 +352,9 @@
 \begin{frame}{Resolution limit}
 	
 	\begin{itemize}
-		\item Coupled noise is mainly composed of Brownian motion 
-		\item Amplitude limited by Brownian uncertainty of $p=6.2\mu W$.
+		\item Inserting the coupled noise value to the q factor results with the possible damped angle.
+
+
 		\item Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$ (from Q factor).
 		\item Resolution limit proportional to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
