--- a/Presentation.tex
+++ b/Presentation.tex
@@ -341,7 +341,7 @@
 		
 		\item Only net collision power affects the pendulum motion.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
-		\item Coupled noise is mostly Brownian motion (with negligible addition of black body radiation and acoustic waves).   	 
+		\item Coupled noise is mostly Brownian motion (negligible addition of black body radiation and acoustic waves).   	 
 					
 	\end{itemize}
 	\hyperlink{frame:Effective noise 1}{>>} 
@@ -352,10 +352,8 @@
 \begin{frame}{Resolution limit}
 	
 	\begin{itemize}
-		\item Inserting the coupled noise value to the q factor results with the possible damped angle.
-
-
-		\item Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$ (from Q factor).
+		\item Inserting coupled noise value into Q factor; minimal possible damped angle.
+		\item Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$.
 		\item Resolution limit proportional to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 				
