--- a/Presentation.tex
+++ b/Presentation.tex
@@ -352,7 +352,7 @@
 \begin{frame}{Resolution limit}
 	
 	\begin{itemize}
-		\item Inserting coupled noise value into Q factor; Might allow to damp down to $\theta\approx 2\cdot 10^{-14}$.
+		\item Inserting coupled noise value into Q factor; might allow to damp down to minimal angle of $\theta\approx 2\cdot 10^{-14}$.
 		\item Resolution limit proportional to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 				
