--- a/Presentation.tex
+++ b/Presentation.tex
@@ -386,7 +386,8 @@
 
 		\item Torsional pendulum placed inside vacuum and a faraday shield, with optical measurement of angular deflection.
 		\item Measured down to $90 [mg]$ around spectral band of $12.7 [mHz]$, preventing high frequency nonlinear coupling.
-		
+		\item Our system is not limited to a specific spectral band due to having a tunable feedback system.
+
 	\end{itemize}
 \end{frame}
 
