--- a/Presentation.tex
+++ b/Presentation.tex
@@ -21,7 +21,7 @@
 \graphicspath{{./images/presentation}}
 
 %%
-% load TEI-Pel - specific layout
+% load TEIPel - specific layout
 \usepackage{TeiPel_En_Beamer_Layout}
 \setTeipelLayout{draft,newlogo}% options: "draft", "newlogo"
 
@@ -408,7 +408,7 @@
 
 \iffalse
 
-\subsection[Basic Problem]{The basic problem that we have studed}
+\subsection[Basic Problem]{The basic problem that we have studied}
 
 \begin{frame}{Slide Title \#1}
 	\framesubtitle{Slide subtitle \#1}
