--- a/Presentation.tex
+++ b/Presentation.tex
@@ -71,7 +71,7 @@
 
 		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$.
 		%\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
-		\item Suspended superconducting sphere; sensitivity of 1 $pico-g$ after a year of integration
+		\item Suspended superconducting sphere; sensitivity of 1 $pico-g$ after one year of integration.
 		\item Atomic interferometer; sensitivity of 500 $femto-g$ after one hour of integration.
 
 		
