--- a/Presentation.tex
+++ b/Presentation.tex
@@ -226,9 +226,9 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{\hypertarget{frame:Gravimetric measurement}{Gravitational measurement}}
+\begin{frame}{\hypertarget{frame:Gravimetric measurement}{Gravimetric measurement}}
 	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
+		\includegraphics[width=0.35\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
 	\begin{itemize}
 		
