--- a/Presentation.tex
+++ b/Presentation.tex
@@ -181,7 +181,7 @@
 	\end{center}
 	\begin{itemize}
 		\item Front mirror stabilized by a balancing mass.
-		\item Chosen dimensions aim achieving small $\kappa$ with large $T$.
+		\item Chosen dimensions aim achieving large $T$ with small $\kappa$.
 		\item Measured: $T = 84[s]$, $\kappa = 2.7\cdot10^{-6}[\frac{N\cdot m}{rad}]$.
 	\end{itemize}
 	\hyperlink{frame:Cavendish apparatus}{<<} 
@@ -301,14 +301,14 @@
 
 \begin{frame}{\hypertarget{frame:Quality factor}{Quality factor}}
 	\begin{center}		
-		\includegraphics[width=0.75\textwidth,keepaspectratio]{Q factor.png}
+		\includegraphics[width=0.85\textwidth,keepaspectratio]{Q factor.png}
 	\end{center}
 	\begin{itemize}	
 		\item Quality factor describes how damped the oscillator.
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
 		\item $Q<0$; noise larger than damping - results with driving.
 		\item Coupled noise estimation; from measured damped angle. 
-		\item Noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
+		%\item Noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
 	\end{itemize}
 	\hyperlink{frame:Quality factor 1}{>>} 
 \end{frame}
