--- a/Presentation.tex
+++ b/Presentation.tex
@@ -254,7 +254,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{\hypertarget{frame:LED PWM setup}{LED PWM setup}}
+\begin{frame}{\hypertarget{frame:Current LED setup}{Current LED setup}}
 
 	\begin{center}		
 		\includegraphics[width=1\textwidth,keepaspectratio]{led_setup.png}
@@ -267,7 +267,7 @@
 		
 		
 	\end{itemize}
-	\hyperlink{frame:LED PWM setup 1}{>>} 
+	\hyperlink{frame:Current LED setup 1}{>>} 
 \end{frame}
 
 
@@ -677,7 +677,7 @@
 \end{frame}
 
 
-\begin{frame}{\hypertarget{frame:LED PWM setup 1}{LED PWM setup}}
+\begin{frame}{\hypertarget{frame:Current LED setup 1}{Current LED setup}}
 	\framesubtitle{Arduino microcontroller}
 	\begin{center}		
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
@@ -688,7 +688,7 @@
 		\item Analog signal depended on duty-cycle: $V(t) =  \frac{V_d}{100}\cdot D(t)$.
 		\item Modulation limited by clock frequency: $f_{PWM} \approx 500[Hz]$.
 	\end{itemize}
-	\hyperlink{frame:LED PWM setup}{<<} 
+	\hyperlink{frame:Current LED setup}{<<} 
 \end{frame}
 
 \begin{frame}{\hypertarget{frame:Quality factor 1}{Quality factor}}
