--- a/Presentation.tex
+++ b/Presentation.tex
@@ -262,7 +262,7 @@
 	\begin{itemize}		
 		\item Two LED sources driven by an Arduino controller and coupled into light guides overcoming LED's field of view.
 		\item Low modulation range of 8-bit.
-		\item Linear pulse width modulation (PWM) response minimizes overshoot.
+		\item Linear pulse width modulation response minimizes overshoot.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
 		
 		
