--- a/Presentation.tex
+++ b/Presentation.tex
@@ -261,8 +261,8 @@
 	\end{center}
 	\begin{itemize}		
 		\item Two LED sources driven by an Arduino controller and coupled into light guides overcoming LED's field of view.
-		\item Low modulation range of 8-bit.
-		\item Linear pulse width modulation response minimizes overshoot.
+		\item Pulse width modulation with low modulation range of 8-bit.
+		\item Linear response minimizes overshoot.
 		\item Fast frequency minimizes phase delay; $f \approx 500[Hz]$.
 		
 		
