--- a/Presentation.tex
+++ b/Presentation.tex
@@ -307,7 +307,7 @@
 		\item Quality factor describes how damped the oscillator.
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
 		\item $Q<0$; noise larger than damping - results with driving.
-		\item Coupled noise estimation; from measured damped amplitude. 
+		\item Coupled noise estimation; from measured amplitudes. 
 		%\item Noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
 	\end{itemize}
 	\hyperlink{frame:Quality factor 1}{>>} 
