--- a/Presentation.tex
+++ b/Presentation.tex
@@ -333,7 +333,7 @@
 
 
 
-\begin{frame}{\hypertarget{frame:Effective noise}{Effective noise}}
+\begin{frame}{\hypertarget{frame:The effective noise}{The effective noise}}
 	\begin{center}		
 		\includegraphics[width=0.35\textwidth,keepaspectratio]{random_motion1.jpg}
 	\end{center}
@@ -346,7 +346,7 @@
 		\item Coupled noise is mostly Brownian motion (negligible addition of black body radiation and acoustic waves).   	 
 					
 	\end{itemize}
-	\hyperlink{frame:Effective noise 1}{>>} 
+	\hyperlink{frame:The effective noise 1}{>>} 
 
 \end{frame}
 
@@ -707,7 +707,7 @@
 \end{frame}
 
 
-\begin{frame}{\hypertarget{frame:Effective noise 1}{Effective noise}}
+\begin{frame}{\hypertarget{frame:The effective noise 1}{The effective noise}}
 	\framesubtitle{Calculated noises}
 	\begin{itemize}	
 		\item Thermal flow: $p=0.083[W]$.
@@ -717,6 +717,6 @@
 		\item New estimated noise: $p=1\cdot 10^{-19} - 7\cdot 10^{-19}[W]$.
 					
 	\end{itemize}
-	\hyperlink{frame:Effective noise}{<<} 
+	\hyperlink{frame:The effective noise}{<<} 
 \end{frame}
 \end{document}
