--- a/Presentation.tex
+++ b/Presentation.tex
@@ -351,7 +351,7 @@
 \end{frame}
 
 
-\begin{frame}{Resolution limit}
+\begin{frame}{The resolution limit}
 	
 	\begin{itemize}
 		\item Inserting noise value into noise estimator from Q factor.
