--- a/Presentation.tex
+++ b/Presentation.tex
@@ -351,12 +351,12 @@
 \end{frame}
 
 
-\begin{frame}{The resolution limit}
+\begin{frame}{The uncertainty limit}
 	
 	\begin{itemize}
-		\item Inserting noise value into noise estimator from Q factor.
-		\item Might allow to damp down to minimal angle of $\theta\approx 2\cdot 10^{-14}$.
-		\item Resolution limit proportional to damped amplitude $\theta$. 	
+		\item Inserting effective noise value into quality factor.
+		\item Might allow to damp down to minimal amplitude of $\theta\approx 2\cdot 10^{-14}$.
+		\item Uncertainty limit is equal to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 				
 	\end{itemize}
