--- a/Presentation.tex
+++ b/Presentation.tex
@@ -386,7 +386,7 @@
 	\begin{itemize}
 		\item Results were published in Nature at march 2021.
 
-		\item Torsional pendulum placed inside vacuum with a faraday shield, using optical measurement of angular deflection.
+		\item A torsional pendulum placed inside vacuum with a faraday shield, using optical measurement of angular deflection.
 		\item Measured down to $90 [mg]$ around spectral band of $12.7 [mHz]$, preventing high frequency nonlinear coupling.
 		\item Feedback control systems are not limited to a specific spectral band.
 
