--- a/Presentation.tex
+++ b/Presentation.tex
@@ -54,9 +54,9 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{gravity.png}
     \end{center}
 	\begin{itemize}
-		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ .
-		\item Mass vibrations results with energy spectral density.
+		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$.
 		\item Since the gravitational constant is small, the force is weak.
+		\item Measured in the sensor’s energy spectral density and integrated.
 
 		%\item High sensitivity is a significant challenge at low frequencies.
 		\end{itemize}
