--- a/Presentation.tex
+++ b/Presentation.tex
@@ -56,9 +56,9 @@
 	\begin{itemize}
 		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$.
 		\item Since the gravitational constant is small, the force is weak.
-		\item Measured in the sensor’s energy spectral density and integrated.
+		\item Measured in the sensor’s energy spectral density.
 
-		%\item High sensitivity is a significant challenge at low frequencies.
+		\item Long integration time at low frequencies with limited sensitivity.
 		\end{itemize}
 \end{frame}
 
