--- a/Presentation.tex
+++ b/Presentation.tex
@@ -58,7 +58,7 @@
 		\item Since the gravitational constant is small, the force is weak.
 		\item Measured in the sensor’s energy spectral density.
 
-		\item \textlatin{Long integration time  with limited sensitivity.}
+		\item \textcolor{red}{Problem: long integration time  with limited sensitivity.}
 		\end{itemize}
 \end{frame}
 
