--- a/Presentation.tex
+++ b/Presentation.tex
@@ -118,8 +118,8 @@
 		
 		\item Angle is measured using a mirror and quadrant detector.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
-		\item Damping effectively lowers the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
-		\item Reducing the uncertainty by damping enables higher sensitivity; $\frac{M}{r_0^3} \propto [\overline{\theta}_g\pm \delta\theta] \propto [\overline{\theta}_g\pm \theta_{damped}]$.
+		\item Temperature’s thermal uncertainty; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
+		\item Reducing the uncertainty by damping enables higher sensitivity; $\frac{M}{r_0^3} \propto [\overline{\theta}_g\pm \delta\theta] = [\overline{\theta}_g\pm \theta_{damped}]$.
 
 		
 	\end{itemize}
