--- a/Presentation.tex
+++ b/Presentation.tex
@@ -119,7 +119,7 @@
 		\item Angle is measured using a mirror and quadrant detector.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\item Temperature’s thermal uncertainty; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
-		\item Damping reduces the uncertainty and increases sensitivity; $\Delta\frac{M}{r_0^3} \propto  \delta\theta =  \theta_{damped}$.
+		\item Damping increases sensitivity; $  \delta\theta =  \theta_{damped}$.
 
 		
 	\end{itemize}
