--- a/Presentation.tex
+++ b/Presentation.tex
@@ -149,10 +149,10 @@
 			\includegraphics[width=0.35\textwidth,keepaspectratio]{setup cropped.png}
 	\end{center}
 	\begin{itemize}
-		\item Torsional pendulum is placed inside a vacuum chamber and an acoustic box; reducing environmental coupled noises.
-		\item A PID feedback algorithm modulates two light sources in real-time; tilt angle measured with a laser hitting a mirror.
-		\item Pendulum damped by external radiation pressure torque.
-	
+		\item Torsional pendulum with tilt angle measured by an optical readout.
+		\item A feedback algorithm modulates two light sources in real-time; damping motion by external radiation pressure torque.
+		\item is placed inside a vacuum chamber and an acoustic box; reducing environmental coupled noises.
+
 	\end{itemize}
 	
 \end{frame}
