--- a/Presentation.tex
+++ b/Presentation.tex
@@ -149,8 +149,8 @@
 			\includegraphics[width=0.35\textwidth,keepaspectratio]{setup cropped.png}
 	\end{center}
 	\begin{itemize}
-		\item Torsional pendulum tilt angle measured by an optical readout.
-		\item Feedback algorithm modulates two light sources in real-time; damping motion by external radiation pressure torque.
+		\item Torsional pendulum tilt angle measured using optical readout.
+		\item Feedback algorithm modulates two light sources; damping motion by external radiation pressure torque.
 		\item Pendulum is placed inside a vacuum chamber and an acoustic box; reducing environmental coupled noises.
 
 	\end{itemize}
