--- a/Presentation.tex
+++ b/Presentation.tex
@@ -163,8 +163,8 @@
 		\includegraphics[width=0.45\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
 	\begin{itemize}
+		\item Custom system designed and assembled from scratch.
 		\item Measurements is conducted with vacuum engine off.
-		\item Maintenance of low pressure; leakage, outgassing.
 		\item Chosen materials minimize magnetic noise and outgassing.
 		\item Chamber is with transparent windows through light guides.
 
