--- a/Presentation.tex
+++ b/Presentation.tex
@@ -195,7 +195,7 @@
 \subsection{Damping and measurement}
 
 % frame 2
-\begin{frame}{\hypertarget{frame:Proportional–integral–derivative (PID) controller}{Proportional–integral–derivative (PID) controller}}
+\begin{frame}{\hypertarget{frame:Proportional–integral–derivative (PID) algorithm}{Proportional–integral–derivative (PID) algorithm}}
 	\begin{center}		
 		\includegraphics[width=0.7\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
     \end{center}
@@ -208,7 +208,7 @@
 
 
 	\end{itemize}
-	\hyperlink{frame:Proportional–integral–derivative (PID) controller 1}{>>} 
+	\hyperlink{frame:Proportional–integral–derivative (PID) algorithm 1}{>>} 
 \end{frame}
 
 % frame 3
@@ -503,7 +503,7 @@
 \end{frame}
 
 % frame 5
-\begin{frame}{\hypertarget{frame:Proportional–integral–derivative (PID) controller 1}{Proportional–integral–derivative (PID) controller}}
+\begin{frame}{\hypertarget{frame:Proportional–integral–derivative (PID) algorithm 1}{Proportional–integral–derivative (PID) algorithm}}
 	\framesubtitle{PID response}
 	\begin{center}		
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
@@ -513,7 +513,7 @@
 		\item Each response is modulated by a tunable gain. 
 		\item Output: $u(t) = K_P e(t)+K_I\int_{0}^{t}e(\tau)d\tau+K_D\frac{de(t)}{dt}$		
 	\end{itemize}
-	\hyperlink{frame:Proportional–integral–derivative (PID) controller}{<<} 
+	\hyperlink{frame:Proportional–integral–derivative (PID) algorithm}{<<} 
 \end{frame}
 
 
