--- a/Presentation.tex
+++ b/Presentation.tex
@@ -201,7 +201,7 @@
     \end{center}
 	\begin{itemize}	
 
-		\item PID is a feedback based control system, for continuous control of a process to a defined set point (damped motion).
+		\item PID is a feedback based control algorithm, for continuous control of a process to a defined set point by damped motion.
 		\item When tuned correct; critical damping of process.
 		\item The control is a weighted sum of proportional, integral and derivative response to error from defined set point (P-I-D).
 		\item Feedback applies correction by modulating the torque $\tau(t)$.
