--- a/Presentation.tex
+++ b/Presentation.tex
@@ -202,9 +202,9 @@
 	\begin{itemize}	
 
 		\item PID is a feedback based control algorithm, for continuous control of a process, damping it to a defined set point.
-		\item When tuned correct; critical damping of process.
+		\item Algorithm adapted to the system’s physical characteristics and noise.
 		\item The control is a weighted sum of proportional, integral and derivative response to error from defined set point (P-I-D).
-		\item Feedback applies correction by modulating the torque $\tau(t)$.
+		\item Control applies correction by modulating the torque $\tau(t)$.
 
 
 	\end{itemize}
