--- a/Presentation.tex
+++ b/Presentation.tex
@@ -202,7 +202,7 @@
 	\begin{itemize}	
 
 		\item PID is a feedback based control algorithm, for continuous control of a process, damping it to a defined set point.
-		\item Algorithm adapted to the system’s physical characteristics and noise.
+		\item Algorithm adapted to the specific system characteristics.
 		\item The control is a weighted sum of proportional, integral and derivative response to error from defined set point (P-I-D).
 		\item Control applies correction by modulating the torque $\tau(t)$.
 
