--- a/Presentation.tex
+++ b/Presentation.tex
@@ -226,7 +226,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{\hypertarget{frame:Gravimetric measurement}{Gravimetric measurement}}
+\begin{frame}{\hypertarget{frame:Gravimetric sensing}{Gravimetric sensing}}
 	\begin{center}		
 		\includegraphics[width=0.35\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
