--- a/Presentation.tex
+++ b/Presentation.tex
@@ -304,7 +304,9 @@
 		\includegraphics[width=0.85\textwidth,keepaspectratio]{Q factor.png}
 	\end{center}
 	\begin{itemize}	
-		\item Quality factor describes how damped the oscillator.
+		\item Quality factor (Q) describes how damped the oscillator.
+		\item $Q>0.5$ - underdamped, $Q=0.5$ - critically damped, $Q<=>0.5$ - over damped.
+
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
 		\item $Q<0$; noise larger than damping - results with driving.
 		\item Coupled noise estimation; from measured amplitudes. 
