--- a/Presentation.tex
+++ b/Presentation.tex
@@ -305,7 +305,7 @@
 	\end{center}
 	\begin{itemize}	
 		\item Quality factor (Q) describes how damped the oscillator.
-		\item $Q>0.5$ - underdamped, $Q=0.5$ - critically damped, $Q<=>0.5$ - over damped.
+		\item $Q>0.5$ - underdamped, $Q=0.5$ - critically damped, $Q<0.5$ - overdamped.
 
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
 		\item $Q<0$; noise larger than damping - results with driving.
