--- a/Presentation.tex
+++ b/Presentation.tex
@@ -291,7 +291,9 @@
 	\end{center}
 	\begin{itemize}	
 		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$; enables reducing uncertainty further more by time integration.	
-		\item Setup able to damp up to an amplitude of $0.05[\mu rad]$.					
+		\item Setup able to damp down to an amplitude of $0.05[\mu rad]$.
+		\item \textcolor{red}{Problem: coupled driving noise is unknown.}
+					
 	\end{itemize}
 \end{frame}
 
