--- a/Presentation.tex
+++ b/Presentation.tex
@@ -359,7 +359,7 @@
 	
 	\begin{itemize}
 		\item Inserting effective noise value into quality factor.
-		\item Might allow to damp down to amplitude of $\theta\approx 2\cdot 10^{-14}$.
+		\item Might allow to damp down to amplitude of $\theta\approx 2\cdot 10^{-14}[rad]$.
 		\item Uncertainty limit is equal to damped amplitude $\theta$. 	
 		\item Achieved if damping lowers temperature; $\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 				
