--- a/Presentation.tex
+++ b/Presentation.tex
@@ -310,7 +310,7 @@
 		\item $Q>0.5$ - underdamped, $Q=0.5$ - critically damped, $Q<0.5$ - overdamped.
 
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
-		\item $Q<0$; noise larger than damping - results with driving.
+		\item $Q\rightarrow 0$; noise equal to damping - no effect.
 		\item Coupled noise estimation; from measured amplitudes. 
 		%\item Noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
 	\end{itemize}
