--- a/Presentation.tex
+++ b/Presentation.tex
@@ -307,10 +307,8 @@
 	\end{center}
 	\begin{itemize}	
 		\item Quality factor (Q) describes how damped the oscillator.
-		\item $Q>0.5$ - underdamped, $Q=0.5$ - critically damped, $Q<0.5$ - overdamped.
-
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
-		\item $Q\rightarrow 0$; noise equal to damping - no effect.
+		\item $Q>0.5$ - underdamped, $Q=0.5$ - critically damped, $Q<0.5$ - overdamped, $Q\rightarrow 0$; no effect (noise equal to damping). 
 		\item Coupled noise estimation; from measured amplitudes. 
 		%\item Noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
 	\end{itemize}
