--- a/Presentation.tex
+++ b/Presentation.tex
@@ -290,7 +290,7 @@
 		\includegraphics[width=0.85\textwidth,keepaspectratio]{measured oscillation angle1.png}
 	\end{center}
 	\begin{itemize}	
-		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$; enables reducing uncertainty further more by time integration.	
+		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$; further uncertainty reduction by time integration.	
 		\item Setup able to damp down to an amplitude of $0.05[\mu rad]$.
 		\item \textcolor{red}{Problem: coupled driving noise is unknown.}
 					
