--- a/Presentation.tex
+++ b/Presentation.tex
@@ -308,7 +308,7 @@
 	\begin{itemize}	
 		\item Quality factor (Q) describes how damped the oscillator.
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta^2}{T(\frac{\theta\pi\tau}{T} -p)} $.
-		\item $Q>0.5$; underdamped, $Q=0.5$; critically damped, $Q<0.5$; overdamped, $Q\rightarrow 0$; no effect (noise power equal to damping). 
+		\item $Q>0.5$; underdamped, $Q=0.5$; critically damped, $Q<0.5$; overdamped, $Q\rightarrow 0$; noise power equal to damping. 
 		\item Coupled noise estimation; from measured amplitudes. 
 		%\item Noise estimation: $p \rightarrow \frac{ \theta\pi\tau}{T}$. 
 	\end{itemize}
